Change the level of Selection.addRange failure message.

Error -> Warning.

Bug: 697443
Change-Id: Ib4e88bb64cd5f1a533ae88306c47e91ca0606085
Reviewed-on: https://chromium-review.googlesource.com/c/1337216
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Commit-Queue: Kent Tamura <tkent@chromium.org>
Cr-Commit-Position: refs/heads/master@{#608284}